# android-rust-template

./: AndroidManifest.xml  Cargo.toml  Makefile  README.md  rename.sh
src/: lib.rs
src/app/: controller.rs  mod.rs
src/platform/android/: mod.rs
